Fixed sonarqube issue